--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 #container {
@@ -9,20 +10,28 @@ body {
     flex-direction: column;
     height: 100vh;
     font-size: 25vw;
-}
-
-#clock {
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-.rest {
-    background-color: black;
-    color: white;
-}
-
-.go {
     background-color: white;
     color: black;
+}
+
+
+@media (orientation: landscape) {
+    #clock {
+        display: flex;
+        flex-direction: row;
+    }
+}
+
+@media (orientation: portrait) {
+    #clock {
+        display: flex;
+        flex-direction: column;
+        font-size: 50vw;
+    }
+
+    .sep {
+        display: none;
+    }
 }
 
 #btn {
@@ -33,5 +42,5 @@ body {
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
-  }
+    font-size: 3vw;
+}
